Fixed '5-day' panel spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,12 +22,13 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin: 5px 0 5px 0;
+  
 }
 
-.day-card { 
+.daycard { 
   display: flex;
   flex-wrap: wrap;
+  margin: 5px 0 5px 0;
 }
 
 
